--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ data/LoanStats_2017Q2\.csv
 data/LoanStats_2017Q3\.csv
 
 data/LoanStats_2017Q4\.csv
+
+\.ipynb_checkpoints/project-checkpoint\.ipynb
+
+\.ipynb_checkpoints/script-with-ids-checkpoint\.ipynb
+
+*.csv
